--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "PPTcirc"]
+	path = PPTcirc
+	url = https://github.com/karlampm/pptcirc
+	shallow = true
+	registered = true
